--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gpt3_valera",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sergiogval.github.io/gpt_valera",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
